# type_eval

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  flake.nix
src/: _inners.rs  complex_evals.rs  ctrl_types.rs  evals.rs  expr.rs  formula_traits.rs  lib.rs  main.rs  op_types.rs  remys_gift.rs  val_types.rs
src/evals/: add.rs  bit_not.rs  bit_or.rs  mul.rs  not.rs  shift.rs  sub.rs  trim.rs
src/evals/add/: bit_bit_adds.rs  int_bit_adds.rs  int_int_adds.rs
src/evals/sub/: bit_sub.rs  int_bit_sub.rs  int_int_sub.rs
src/expr/: add.rs  cmp.rs  div.rs  gcd.rs  if_branch.rs  lcm.rs  mlsb.rs  modulo.rs  msb.rs  mul.rs  shlr.rs  sub.rs
src/expr/cmp/: and.rs  andor.rs  andornot.rs  eq.rs  gt.rs  lt.rs  ltegte.rs  ord.rs
src/expr/div/: helpers.rs
